--- a/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -20,107 +20,144 @@ state:
   {{!-- apikey: PS-Auth key={{apikeytoken}};runas={{username}};pwd={{password}} --}}
   apikey: {{apikeytoken}}
   want_more: false
-  offset: 0
+  initial_interval: {{initial_interval}}
   limit: {{limit}}
-program: |
-  state.with(
-  state.?want_more.orValue(false) ? {"message": "no action required"} : 
-  post_request(
-    state.url + "/Auth/SignAppin",
-    "",
-    {}.encode_json()
-  ).with({
-    "Header": {
-      "Authorization": [state.apikey],
-      "Content-Type": ["application/json"]
-    },
-  }).do_request().as(resp, resp.StatusCode != 200 ? 
-  {
-        "events": {
-          "error": {
-            "code": string(resp.StatusCode),
-            "id": string(resp.Status),
-            "message": "POST:"+(
-              size(resp.Body) != 0 ?
-                string(resp.Body)
-              :
-                string(resp.Status) + ' (' + string(resp.StatusCode) + ')'
-            ),
-          },
-        },
-        "want_more": false,
-      }
-    :
-     resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(sess,sess.size() > 0 ? 
-        sess[0]
-        :
-        ""
-      )  
-    ).as(cookie, cookie == "" ?  
-    {
-         "events": {
-          "error": {
-            "message": "Cookie Not Present: ASP.NET_SessionId"
-          },
-        },
-        "want_more": false,
-      }
-     :
-     state.?want_more.orValue(false) ? {"message": "no action required"} : 
-     get_request(
-      state.url + "/UserAudits?" + {
-        "offset": [string(state.offset)],
-        "limit": [string(state.limit)],
-      }.format_query()).with({
-      "Header": {
-        "Cookie": [cookie],
-        "Content-Type": ["application/json"],
-      },
-    }).do_request().as(resp,resp.StatusCode != 200 ?
-    {
-         "events": {
-          "error": {
-            "code": string(resp.StatusCode),
-            "id": string(resp.Status),
-            "message": "GET:"+(
-              size(resp.Body) != 0 ?
-                string(resp.Body)
-              :
-                string(resp.Status) + ' (' + string(resp.StatusCode) + ')'
-            ),
-          },
-        },
-        "want_more": false,
-      }
-      :
-       bytes(resp.Body).decode_json().as(body,{
-        "events": body.Data.map(e,
+  offset: {{offset}}
+redact:
+  fields:
+    - apikey 
+program: |-
+  // Check auth_cookie is presnt or not if not then call the /Auth/SignAppIn API if present the call /UserAudits API
+  (!has(state.cursor) || has(state.cursor) && has(state.cursor.auth_cookie) && state.cursor.auth_cookie == null) ?
+  	(
+  		// Authenticating using API to retrieve auth Cookie
+  		request("POST", state.url + "/Auth/SignAppin").with(
+  			{
+  				"Header": {
+  					"Authorization": [state.apikey],
+  					"Content-Type": ["application/json"],
+  				},
+  			}
+  		).do_request().as(resp, (resp.StatusCode != 200) ?
+  			{
+  				"events": {
+  					"error": {
+  						"code": string(resp.StatusCode),
+  						"id": string(resp.Status),
+  						"message": "POST:" + 
+  						(
+  							(size(resp.Body) != 0) ?
+  								string(resp.Body)
+  							:
+  								string(resp.Status) + " (" + string(resp.StatusCode) + ")"
+  						),
+  					},
+  				},
+  				"want_more": false,
+  			}
+  		:
+  			resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(sess, (sess.size() > 0) ?
+  				(sess[0])
+  			:
+  				""
+  			)
+  		).as(auth_cookie,
+  			// submit get UserAudits query to get audit event logs
+  			request(
+  				"GET",
+  				state.url + "/UserAudits" + "?" + {
+  					"limit": [string(state.limit)],
+  					"offset": [string(state.offset)],
+  				}.format_query()
+  			).with(
+  				{
+  					"Header": {
+  						"Content-Type": ["application/json"],
+  						"Cookie": [auth_cookie],
+  					},
+  				}
+  			).do_request().as(resp,
+  				(resp.StatusCode == 200) ?
+  					bytes(resp.Body).decode_json().as(body,
+  						state.with(
+  							{
+  								"events": body.Data.map(e, {"message": e.encode_json()}),
+  								"want_more": true,
+  								"cursor": {
+  									"auth_cookie": auth_cookie,
+  									"limit": int(state.limit),
+  									"offset": int(state.offset) + int(state.limit),
+  								},
+  							}
+  						)
+  					)
+  				:
+  					state.with(
+  						{
+  							"events": {
+  								"error": {
+  									"message": "Error " + bytes(resp.Body).decode_json().as(body, body.message),
+  								},
+  							},
+  							"want_more": false,
+  							"cursor": state.cursor.with(
+  								{
+  									"auth_cookie": null,
+  									"limit": 0,
+  									"offset": 0,
+  								}
+  							),
+  						}
+  					)
+  			)
+  		)
+  	)
+  :
+  	// auth_cookie is present so submit get UserAudits query to get audit event logs
+  	request(
+  		"GET",
+  		state.url + "/UserAudits" + "?" + {
+  			"limit": [string(state.limit)],
+  			"offset": [string(state.offset)],
+  		}.format_query()
+  	).with(
+  		{
+  			"Header": {
+  				"Content-Type": ["application/json"],
+  				"Cookie": [state.cursor.auth_cookie],
+  			},
+  		}
+  	).do_request().as(resp,
+  		(resp.StatusCode == 200) ?
+  			bytes(resp.Body).decode_json().as(body,
+  				state.with(
   					{
-  						"message": e.encode_json(),
-  						?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
+  						"events": body.Data.map(e, {"message": e.encode_json()}),
+  						"want_more": true,
+  						"cursor": {
+  							"auth_cookie": state.cursor.auth_cookie,
+  							"limit": int(state.limit),
+  							"offset": int(state.offset) + int(state.limit),
+  						},
   					}
-  				),
-          "want_more": size(body.Data)>55? true: false,
-          "offset": int(state.offset) + 100,
-      }
-      )
-    )
-    )
-  )
-tags:
-{{#if preserve_original_event}}
-  - preserve_original_event
-{{/if}}
-{{#if preserve_duplicate_custom_fields}}
-  - preserve_duplicate_custom_fields
-{{/if}}
-{{#each tags as |tag|}}
-  - {{tag}}
-{{/each}}
-{{#contains "forwarded" tags}}
-publisher_pipeline.disable_host: true
-{{/contains}}
-{{#if processors}}
-processors:
-{{processors}}
-{{/if}}
+  				)
+  			)
+  		:
+  			state.with(
+  				{
+  					"events": {
+  						"error": {
+  							"message": "Error " + bytes(resp.Body).decode_json().as(body, body.message),
+  						},
+  					},
+  					"want_more": false,
+  					"cursor": state.cursor.with(
+  						{
+  							"auth_cookie": null,
+  							"limit": 0,
+  							"offset": 0,
+  						}
+  					),
+  				}
+  			)
+  	)
