--- a/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -17,19 +17,17 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-  {{!-- apikey: PS-Auth key={{apikeytoken}};runas={{username}};pwd={{password}} --}}
   apikey: {{apikeytoken}}
   want_more: false
   initial_interval: {{initial_interval}}
   limit: {{limit}}
-  offset: {{offset}}
 redact:
   fields:
-    - apikey 
+    - apikey
 program: |-
-  // Check if the auth_cookie is present or not; if not, then call the /Auth/SignAppIn API; if present, call the /UserAudits API.
-  (!has(state.cursor) || has(state.cursor) && has(state.cursor.auth_cookie) && state.cursor.auth_cookie == null) ?
-  	(
+  
+  (
+  	(!has(state.cursor) || !has(state.cursor.auth_cookie) || state.cursor.auth_cookie == null) ?
   		// Authenticating using API to retrieve auth Cookie
   		request("POST", state.url + "/Auth/SignAppin").with(
   			{
@@ -38,138 +36,37 @@ program: |-
   					"Content-Type": ["application/json"],
   				},
   			}
-  		).do_request().as(resp, (resp.StatusCode != 200) ?
-  			{
-  				"events": {
-  					"error": {
-  						"code": string(resp.StatusCode),
-  						"id": string(resp.Status),
-  						"message": "POST:" + 
-  						(
-  							(size(resp.Body) != 0) ?
-  								string(resp.Body)
-  							:
-  								string(resp.Status) + " (" + string(resp.StatusCode) + ")"
-  						),
-  					},
-  				},
-  				"want_more": false,
-  			}
-  		:
-  			resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(sess, (sess.size() > 0) ?
-  				(sess[0])
-  			:
-  				""
-  			)
-  		).as(auth_cookie,
-  			// submit get UserAudits query to get audit event logs
-  			request(
-  				"GET",
-  				state.url + "/UserAudits" + "?" + {
-  					"limit": [string(state.cursor.limit)],
-  					"offset": [string(state.cursor.offset)],
-  				}.format_query()
-  			).with(
-  				{
-  					"Header": {
-  						"Content-Type": ["application/json"],
-  						"Cookie": [auth_cookie],
-  					},
-  				}
-  			).do_request().as(resp,
-  				(resp.StatusCode == 200) ?
-  					bytes(resp.Body).decode_json().as(body,
-  						state.with(
-  							{
-  								"events": body.Data.map(e, {"message": e.encode_json()}),
-  								"want_more": (int(state.cursor.offset) > int(body.TotalCount)) ?
-  									false
-  								:
-  									true,
-  								"cursor": {
-  									"auth_cookie": auth_cookie,
-  									"limit": int(state.cursor.limit),
-  									"offset": int(state.?cursor.offset.orValue(0)) + int(state.cursor.limit),
-  								},
-  							}
-  						)
-  					)
-  				:
-  					state.with(
-  						{
-  							"events": {
-  								"error": {
-  									"message": "Error " + bytes(resp.Body).decode_json().as(body, body.message),
-  								},
-  							},
-  							"want_more": false,
-  							"cursor": state.cursor.with(
-  								{
-  									"auth_cookie": null,
-  									"limit": 0,
-  									"offset": 0,
-  								}
-  							),
-  						}
-  					)
+  		).do_request().as(resp,
+  			resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(auth_cookie,
+  				auth_cookie[0]
   			)
   		)
-  	)
-  :
-  	// If the auth_cookie is present, submit the get UserAudits query to get audit event logs.
+  	:
+  		state.cursor.auth_cookie
+  ).as(auth_cookie,
   	request(
   		"GET",
-  		state.url + "/UserAudits" + "?" + {
+  		state.url + "/UserAudits?" + {
   			"limit": [string(state.limit)],
-  			"offset": [string(state.offset)],
   		}.format_query()
   	).with(
   		{
   			"Header": {
   				"Content-Type": ["application/json"],
-  				"Cookie": [state.cursor.auth_cookie],
+  				"Cookie": [auth_cookie],
   			},
   		}
   	).do_request().as(resp,
-  		(resp.StatusCode == 200) ?
-  			bytes(resp.Body).decode_json().as(body,
-  				state.with(
-  					{
-  						"events": body.Data.map(e,
-  							{
-  								"message": e.encode_json(),
-  								"limit": int(state.limit),
-  								"offset": int(state.offset) + int(state.limit),
-  							}
-  						),
-  						"want_more": (int(state.cursor.offset) > int(body.TotalCount)) ?
-  							false
-  						:
-  							true,
-  						"cursor": {
-  							"auth_cookie": state.cursor.auth_cookie,
-  							"limit": int(state.limit),
-  							"offset": int(state.?cursor.offset.orValue(0)) + int(state.cursor.limit),
-  						},
-  					}
-  				)
-  			)
-  		:
+  		bytes(resp.Body).decode_json().as(body,
   			state.with(
   				{
-  					"events": {
-  						"error": {
-  							"message": "Error " + bytes(resp.Body).decode_json().as(body, body.message),
-  						},
+  					"events": body.Data.map(e, {"message": e.encode_json()}),
+  					"want_more": true,
+  					"cursor": {
+  						"auth_cookie": auth_cookie,
   					},
-  					"want_more": false,
-  					"cursor": state.cursor.with(
-  						{
-  							"auth_cookie": null,
-  							"limit": 0,
-  							"offset": 0,
-  						}
-  					),
   				}
   			)
+  		)
   	)
+  )
