--- a/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondtrust_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -19,15 +19,17 @@ resource.url: {{url}}
 state:
   apikey: {{apikeytoken}}
   want_more: false
+  offset: 0
   initial_interval: {{initial_interval}}
   limit: {{limit}}
+
 redact:
   fields:
     - apikey
 program: |-
   
   (
-  	(!has(state.cursor) || !has(state.cursor.auth_cookie) || state.cursor.auth_cookie == null) ?
+  	(!has(state.cursor) || has(state.cursor) && has(state.cursor.auth_cookie) && state.cursor.auth_cookie == null) ?
   		// Authenticating using API to retrieve auth Cookie
   		request("POST", state.url + "/Auth/SignAppin").with(
   			{
@@ -48,6 +50,7 @@ program: |-
   		"GET",
   		state.url + "/UserAudits?" + {
   			"limit": [string(state.limit)],
+  			"offset": [has(state.?cursor.offset) ? string(state.cursor.offset) : "0"],
   		}.format_query()
   	).with(
   		{
@@ -61,9 +64,10 @@ program: |-
   			state.with(
   				{
   					"events": body.Data.map(e, {"message": e.encode_json()}),
-  					"want_more": true,
+  					"want_more": ((has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) != body.TotalCount) ? true : false,
   					"cursor": {
   						"auth_cookie": auth_cookie,
+  						"offset": (has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) + size(body.Data),
   					},
   				}
   			)
