--- a/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -17,12 +17,14 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-  apikey: {{apikeytoken}}
+
   want_more: false
   offset: 0
   initial_interval: {{initial_interval}}
   limit: {{limit}}
-
+  apikeytoken: {{apikeytoken}}
+  password: {{password}}
+  username: {{username}}
 redact:
   fields:
     - apikey
@@ -34,7 +36,9 @@ program: |-
   		request("POST", state.url + "/Auth/SignAppin").with(
   			{
   				"Header": {
-  					"Authorization": [state.apikey],
+  					"Authorization": [
+  						string("PS-Auth key=" + state.apikeytoken + ";runas=" + state.username + ";pwd=[" + state.password + "];"),
+  					],
   					"Content-Type": ["application/json"],
   				},
   			}
