--- a/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
@@ -17,95 +17,69 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-  {{!-- apikey: PS-Auth key={{apikeytoken}};runas={{username}};pwd={{password}} --}}
-  apikey: {{apikeytoken}}
   want_more: false
-program: |
-  state.with(
-  state.?want_more.orValue(false) ? {"message": "no action required"} : 
-  post_request(
-    state.url + "/Auth/SignAppin",
-    "",
-    {}.encode_json()
-  ).with({
-    "Header": {
-      "Authorization": [state.apikey],
-      "Content-Type": ["application/json"]
-    },
-  }).do_request().as(resp, resp.StatusCode != 200 ? 
-  {
-        "events": {
-          "error": {
-            "code": string(resp.StatusCode),
-            "id": string(resp.Status),
-            "message": "POST:"+(
-              size(resp.Body) != 0 ?
-                string(resp.Body)
-              :
-                string(resp.Status) + ' (' + string(resp.StatusCode) + ')'
-            ),
-          },
-        },
-        "want_more": false,
-      }
-    :
-     resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(sess,sess.size() > 0 ? 
-        sess[0]
-        :
-        ""
-      )  
-    ).as(cookie, cookie == "" ?  
-    {
-         "events": {
-          "error": {
-            "message": "Cookie Not Present: ASP.NET_SessionId"
-          },
-        },
-        "want_more": false,
-      }
-     :
-     get_request(
-      state.url + "/Sessions"
-      ).with({
-      "Header": {
-        "Cookie": [cookie],
-        "Content-Type": ["application/json"],
-      },
-    }).do_request().as(resp,resp.StatusCode != 200 ?
-    {
-         "events": {
-          "error": {
-            "code": string(resp.StatusCode),
-            "id": string(resp.Status),
-            "message": "GET:"+(
-              size(resp.Body) != 0 ?
-                string(resp.Body)
-              :
-                string(resp.Status) + ' (' + string(resp.StatusCode) + ')'
-            ),
-          },
-        },
-        "want_more": false,
-      }
-      :
-       bytes(resp.Body).decode_json().as(body,{
-        "events": body.map(e,
-  					{
-  						"message": e,
-  						?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
-  					}
-  				),
-      }
-      )
-    )
-    )
+  initial_interval: {{initial_interval}}
+  limit: {{limit}}
+  apikeytoken: {{apikeytoken}}
+  password: {{password}}
+  username: {{username}}
+redact:
+  fields:
+    - apikey
+program: |-
+
+  (
+  	(!has(state.cursor) || has(state.cursor) && has(state.cursor.auth_cookie) && state.cursor.auth_cookie == null) ?
+  		// Authenticating using API to retrieve auth Cookie
+  		request("POST", state.url + "/Auth/SignAppin").with(
+  			{
+  				"Header": {
+  					"Authorization": [
+  						string("PS-Auth key=" + state.apikeytoken + ";runas=" + state.username + ";pwd=[" + state.password + "];"),
+  					],
+  					"Content-Type": ["application/json"],
+  				},
+  			}
+  		).do_request().as(resp,
+  			resp.Header["Set-Cookie"].filter(e, e.contains("ASP.NET_SessionId")).as(auth_cookie,
+  				auth_cookie[0]
+  			)
+  		)
+  	:
+  		state.cursor.auth_cookie
+  ).as(auth_cookie,
+  	request(
+  		"GET",
+  		state.url + "/Sessions")
+  		.with(
+  		{
+  			"Header": {
+  				"Content-Type": ["application/json"],
+  				"Cookie": [auth_cookie],
+  			},
+  		}
+  	).do_request().as(resp,
+  		bytes(resp.Body).decode_json().as(body,
+  			state.with(
+  				{
+  					"events": body.map(e,
+  						{
+  							"message": e,
+  							?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
+  						}
+  					),
+  					"want_more": false,
+  					"cursor": {
+  						"auth_cookie": auth_cookie
+  					},
+  				}
+  			)
+  		)
+  	)
   )
 tags:
 {{#if preserve_original_event}}
   - preserve_original_event
-{{/if}}
-{{#if preserve_duplicate_custom_fields}}
-  - preserve_duplicate_custom_fields
 {{/if}}
 {{#each tags as |tag|}}
   - {{tag}}
