--- a/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -54,7 +54,7 @@ program: |-
   		"GET",
   		state.url + "/UserAudits?" + {
   			"limit": [string(state.limit)],
-  			"offset": [has(state.?cursor.offset) ? string(state.cursor.offset) : "0"],
+  			"offset": [has(state.offset) ? string(state.offset) : "0"],
   		}.format_query()
   	).with(
   		{
@@ -73,10 +73,10 @@ program: |-
   							?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
   						}
   					),
-  					"want_more": ((has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) != body.TotalCount) ? true : false,
+  					"want_more": size(body.Data) > 0,
+  					"offset": (state.offset > body.TotalCount) ? 0 : (state.offset + state.limit),
   					"cursor": {
   						"auth_cookie": auth_cookie,
-  						"offset": (has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) + size(body.Data),
   					},
   				}
   			)
