--- a/packages/beyondinsight_password_safe/data_stream/managedaccount/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/managedaccount/agent/stream/cel.yml.hbs
@@ -17,7 +17,10 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
+
+  want_more: false
   offset: 0
+  initial_interval: {{initial_interval}}
   limit: {{limit}}
   apikeytoken: {{apikeytoken}}
   password: {{password}}
@@ -51,7 +54,7 @@ program: |-
   		"GET",
   		state.url + "/ManagedAccounts?" + {
   			"limit": [string(state.limit)],
-  			"offset": [state.?cursor.offset.orValue("0")],
+  			"offset": [has(state.?cursor.offset) ? string(state.cursor.offset) : "0"],
   		}.format_query()
   	).with(
   		{
@@ -73,7 +76,7 @@ program: |-
   					"want_more": (size(body) > 0) ? true : false,
   					"cursor": {
   						"auth_cookie": auth_cookie,
-  						"offset": state.cursor.offset.orValue(int(0)) + size(body),
+  						"offset": (has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) + size(body),
   					},
   				}
   			)
