- removed unnecessary fields from state - used orValue insetad of has()

--- a/packages/beyondinsight_password_safe/data_stream/managedaccount/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/managedaccount/agent/stream/cel.yml.hbs
@@ -17,10 +17,6 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-
-  want_more: false
-  offset: 0
-  initial_interval: {{initial_interval}}
   limit: {{limit}}
   apikeytoken: {{apikeytoken}}
   password: {{password}}
@@ -29,7 +25,7 @@ redact:
   fields:
     - apikey
 program: |-
-  
+
   (
   	(!has(state.cursor) || has(state.cursor) && has(state.cursor.auth_cookie) && state.cursor.auth_cookie == null) ?
   		// Authenticating using API to retrieve auth Cookie
@@ -54,7 +50,7 @@ program: |-
   		"GET",
   		state.url + "/ManagedAccounts?" + {
   			"limit": [string(state.limit)],
-  			"offset": [has(state.?cursor.offset) ? string(state.cursor.offset) : "0"],
+  			"offset": [string(state.?cursor.offset.orValue(0))],
   		}.format_query()
   	).with(
   		{
@@ -76,7 +72,7 @@ program: |-
   					"want_more": (size(body) > 0) ? true : false,
   					"cursor": {
   						"auth_cookie": auth_cookie,
-  						"offset": (has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) + size(body),
+  						"offset": int(state.?cursor.offset.orValue(0)) + size(body)
   					},
   				}
   			)
