--- a/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
@@ -17,9 +17,6 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-  want_more: false
-  initial_interval: {{initial_interval}}
-  limit: {{limit}}
   apikeytoken: {{apikeytoken}}
   password: {{password}}
   username: {{username}}
@@ -70,8 +67,8 @@ program: |-
   					),
   					"want_more": false,
   					"cursor": {
-  						"auth_cookie": auth_cookie,
-  					},
+  						"auth_cookie": auth_cookie
+  					}
   				}
   			)
   		)
