--- a/packages/beyondinsight_password_safe/data_stream/managedsystem/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/managedsystem/agent/stream/cel.yml.hbs
@@ -17,10 +17,6 @@ resource.ssl.renegotiation: "freely"
 resource.ssl.verification_mode: "certificate"
 resource.url: {{url}}
 state:
-
-  want_more: false
-  offset: 0
-  initial_interval: {{initial_interval}}
   limit: {{limit}}
   apikeytoken: {{apikeytoken}}
   password: {{password}}
@@ -54,7 +50,7 @@ program: |-
   		"GET",
   		state.url + "/ManagedSystems?" + {
   			"limit": [string(state.limit)],
-  			"offset": [has(state.?cursor.offset) ? string(state.cursor.offset) : "0"],
+  			"offset": [string(state.?cursor.offset.orValue(0))],
   		}.format_query()
   	).with(
   		{
@@ -73,10 +69,10 @@ program: |-
   							?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
   						}
   					),
-  					"want_more": ((has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) != body.TotalCount) ? true : false,
+  					"want_more": state.?cursor.offset.orValue(0) != body.TotalCount ? true : false,
   					"cursor": {
   						"auth_cookie": auth_cookie,
-  						"offset": (has(state.?cursor.offset) ? int(state.cursor.offset) : int(0)) + size(body.Data),
+  						"offset": int(state.?cursor.offset.orValue(0)) + size(body.Data)
   					},
   				}
   			)
