--- a/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -51,7 +51,7 @@ program: |-
   		"GET",
   		state.url + "/UserAudits?" + {
   			"limit": [string(state.limit)],
-  			"startdate": [string(state.?cursor.startdate.orValue((now - duration(state.initial_interval)).format(time_layout.RFC3339)))],
+  			"startdate": [string(state.?cursor.startdate.orValue((now - duration(string(int(int(state.initial_interval)) / 24) + "h")).format(time_layout.RFC3339)))],
   			"enddate": [string(state.?cursor.enddate.orValue(""))],
   		}.format_query()
   	).with(
