--- a/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/session/agent/stream/cel.yml.hbs
@@ -56,33 +56,33 @@ program: |-
   			},
   		}
   	).do_request().as(resp,
-  	    (resp.StatusCode == 401) ?
+  		(resp.StatusCode == 401) ?
   			state.with(
   				{
-  					"events": [{"message": {"reason": "User not authenticated", "code": string(resp.StatusCode)}.encode_json()}],
+  					"events": {"message": {"reason": "User not authenticated", "code": string(resp.StatusCode)}.encode_json()},
   					"want_more": true,
   					"cursor": {
-  						"auth_cookie": null
-                    }
+  						"auth_cookie": null,
+  					},
   				}
   			)
   		:
-  		bytes(resp.Body).decode_json().as(body,
-  			state.with(
-  				{
-  					"events": body.map(e,
-  						{
-  							"message": e,
-  							?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
-  						}
-  					),
-  					"want_more": false,
-  					"cursor": {
-  						"auth_cookie": auth_cookie
+  			bytes(resp.Body).decode_json().as(body,
+  				state.with(
+  					{
+  						"events": body.map(e,
+  							{
+  								"message": e,
+  								?"event.original": state.?preserve_original_event.orValue(false) ? optional.of(e.encode_json()) : optional.none(),
+  							}
+  						),
+  						"want_more": false,
+  						"cursor": {
+  							"auth_cookie": auth_cookie,
+  						},
   					}
-  				}
+  				)
   			)
-  		)
   	)
   )
 tags:
