fix: user audit system test

--- a/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/agent/stream/cel.yml.hbs
@@ -22,6 +22,7 @@ state:
   apikeytoken: {{apikeytoken}}
   password: {{password}}
   username: {{username}}
+  preserve_original_event: true
 redact:
   fields:
     - apikey
